fix post icon clipping, use HTML button for better accessibility

--- a/client/src/components/post/Post.module.scss
+++ b/client/src/components/post/Post.module.scss
@@ -37,10 +37,6 @@
   gap: 0.8rem;
 }
 
-.IconButton {
-  cursor: pointer;
-}
-
 .PostFooter {
   margin-top: 0.8rem;
   display: flex;
@@ -49,8 +45,21 @@
   user-select: none;
   min-height: 1.2rem;
   gap: 0.4rem;
+  width: fit-content;
 }
 
 .PostBody {
   margin: 0;
+}
+
+.FooterButton {
+  svg {
+    overflow: visible;
+  }
+  cursor: pointer;
+  appearance: none;
+  border: none;
+  background-color: transparent;
+  padding: 0.1rem;
+  display: flex;
 }
